--- a/app/src/main/res/layout-w900dp/item_list.xml
+++ b/app/src/main/res/layout-w900dp/item_list.xml
@@ -18,7 +18,7 @@
 
     <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/item_list"
+        android:id="@+id/itemList"
         android:name="com.techlads.swvl.ItemListFragment"
         android:layout_width="@dimen/item_width"
         android:layout_height="match_parent"
